Handling displayed entities by user sessions.